--- a/change-password.html
+++ b/change-password.html
@@ -89,17 +89,34 @@
 
 <div class="inview">
 
-<form>
+<p>Your new password must be between 8 and 12 characters long, include letters, at least 1 number and at least one capital letter. It can also include any of these special-characters: !, $, %, ^, &, *, [, ], @, #, ?, +, -, _ </p>
+<p>To read about our sign-in and security features, see <a href="#">help</a>. </p>
 
-<p><label>New password <input type="password" /></label></p>
-<p><label>Confirm new password <input type="password" /></label></p>
-<p><input type="submit" value="Set Password" /></p>
+<h2>Change password</h2>
+
+<form>
+<table class="two-cols">
+<tbody>
+<tr>
+    <td><label for="new_pass_1">New password</label></td>
+    <td><input type="password" name="new_pass_1" id="new_pass_1" /></td>
+</tr>
+
+<tr>
+	<td><label for="new_pass_2">Confirm new password </label></td>
+    <td><input type="password" name="new_pass_2" id="new_pass_2" /></td>
+</tr>
+
+<tr>
+    <td>&nbsp;</td>
+    <td><input type="submit" value="Set Password" /></td>
+</tr>
+
+</tbody>
+</table>
 </form>
 
 
-<p>Your new password must be between 8 and 12 characters long, include letters, at least 1 number and at least one capital letter. It can also include any of these special-characters: !, $, %, ^, &, *, [, ], @, #, ?, +, -, _ </p>
-
-<p>To read about our sign-in and security features, see <a href="#">help</a>. </p>
 
 
 <p><a href="profile.html">Back to Profile</a></p>
