--- a/interrupt-page.html
+++ b/interrupt-page.html
@@ -93,11 +93,11 @@
 <li><a href="#">Changing your module later on</a></li>
 </ul>
 
-<p>[_] I've considered the above and happy to proceed.</p>
+<form>
+<p><label><input name="" type="checkbox" value=""> I've considered the above and happy to proceed.</label></p>
 
-
-<p><a href="#">Choose next modules</a></p>
-
+<p><a href="#" class="ou-btn">Choose next modules</a></p>
+</form>
 
 
 </div>
