--- a/study-record-t1e.html
+++ b/study-record-t1e.html
@@ -50,7 +50,7 @@ $(document).ready(function(){
 	$("a.show-hide").click(function(){
 		$(this).toggleClass("plus minus");
 		$(this).parent().parent().toggleClass("collapsed");
-		$(this).parent().next(".box-qual-inner").slideToggle("fast");
+		$(this).parent().next(".box-expand-collapse-inner").slideToggle("fast");
 	return false;
 	})
 	
@@ -126,9 +126,9 @@ If you’re not planning to study in [2015/16) you can <a href="#">extend your s
 
 <hr>
 
-  <div class="box-qual">
+  <div class="box-expand-collapse">
     <h2>BA/BSc (Honours) Open degree<a href="#" class="show-hide minus">Expand/collapse</a></h2>
-    <div class="box-qual-inner">
+    <div class="box-expand-collapse-inner">
       <ul class="list-style1">
         <li><strong>Code</strong>: QD</li>
         <li><strong>Status</strong>: on a study break</li>
@@ -253,12 +253,12 @@ If you’re not planning to study in [2015/16) you can <a href="#">extend your s
         </dd>
       </dl>
     </div>
-    <!-- end box-qual-inner -->
+    <!-- end box-expand-collapse-inner -->
   </div>
-  <!-- end box-qual -->
+  <!-- end box-expand-collapse -->
   <!--
 
-<div class="box-qual collapsed">
+<div class="box-expand-collapse collapsed">
 
 <h2>Bachelor of Science (Honours) <a href="#" class="show-hide plus">Expand/collapse</a></h2>
 
@@ -266,11 +266,11 @@ If you’re not planning to study in [2015/16) you can <a href="#">extend your s
 
 
 
-<div class="box-qual">
+<div class="box-expand-collapse">
 
 <h2>Other modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
 
-<div class="box-qual-inner">
+<div class="box-expand-collapse-inner">
 
 <h3>Completed modules</h3>
 
@@ -291,7 +291,7 @@ If you’re not planning to study in [2015/16) you can <a href="#">extend your s
 
 </div> 
 </div> -->
-  <!-- end box-qual -->
+  <!-- end box-expand-collapse -->
   <p><a href="profile-t1.html">Back to Profile</a></p>
 </div>
 </div>
