--- a/study-record-t4a.html
+++ b/study-record-t4a.html
@@ -50,7 +50,7 @@ $(document).ready(function(){
 	$("a.show-hide").click(function(){
 		$(this).toggleClass("plus minus");
 		$(this).parent().parent().toggleClass("collapsed");
-		$(this).parent().next(".box-qual-inner").slideToggle("fast");
+		$(this).parent().next(".box-expand-collapse-inner").slideToggle("fast");
 	return false;
 	})
 	
@@ -129,12 +129,12 @@ $(document).ready(function(){
 -->
 
 
-<div class="box-qual">
+<div class="box-expand-collapse">
 
 <h2>BA (Honours) Humanities<a href="#" class="show-hide minus">Expand/collapse</a> </h2>
 
 
-<div class="box-qual-inner">
+<div class="box-expand-collapse-inner">
 
 <ul class="list-style1">
   <li><strong>Code</strong>: QD</li>
@@ -257,14 +257,14 @@ $(document).ready(function(){
 </dd>
 </dl>
 
-</div> <!-- end box-qual-inner -->
-</div> <!-- end box-qual -->
+</div> <!-- end box-expand-collapse-inner -->
+</div> <!-- end box-expand-collapse -->
 
 
 
 <!--
 
-<div class="box-qual collapsed">
+<div class="box-expand-collapse collapsed">
 
 <h2>Bachelor of Science (Honours) <a href="#" class="show-hide plus">Expand/collapse</a></h2>
 
@@ -272,11 +272,11 @@ $(document).ready(function(){
 
 
 
-<div class="box-qual">
+<div class="box-expand-collapse">
 
 <h2>Other modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
 
-<div class="box-qual-inner">
+<div class="box-expand-collapse-inner">
 
 <h3>Completed modules</h3>
 
@@ -296,7 +296,7 @@ $(document).ready(function(){
 </table>
 
 </div> 
-</div> --><!-- end box-qual -->
+</div> --><!-- end box-expand-collapse -->
 
 
 <p><a href="profile-t4.html">Back to Profile</a></p>
