--- a/study-record-t4d.html
+++ b/study-record-t4d.html
@@ -50,7 +50,7 @@ $(document).ready(function(){
 	$("a.show-hide").click(function(){
 		$(this).toggleClass("plus minus");
 		$(this).parent().parent().toggleClass("collapsed");
-		$(this).parent().next(".box-qual-inner").slideToggle("fast");
+		$(this).parent().next(".box-expand-collapse-inner").slideToggle("fast");
 	return false;
 	})
 	
@@ -125,9 +125,9 @@ If you want to start studying again you will need to contact your SST to enrol. 
 
 <hr>
 
-  <div class="box-qual">
+  <div class="box-expand-collapse">
     <h2>BA/BSc (Honours) Open degree<a href="#" class="show-hide minus">Expand/collapse</a></h2>
-    <div class="box-qual-inner">
+    <div class="box-expand-collapse-inner">
       <ul class="list-style1">
         <li><strong>Code</strong>: QD</li>
         <li><strong>Status</strong>: not currently studying</li>
@@ -252,12 +252,12 @@ If you want to start studying again you will need to contact your SST to enrol. 
         </dd>
       </dl>
     </div>
-    <!-- end box-qual-inner -->
+    <!-- end box-expand-collapse-inner -->
   </div>
-  <!-- end box-qual -->
+  <!-- end box-expand-collapse -->
   <!--
 
-<div class="box-qual collapsed">
+<div class="box-expand-collapse collapsed">
 
 <h2>Bachelor of Science (Honours) <a href="#" class="show-hide plus">Expand/collapse</a></h2>
 
@@ -265,11 +265,11 @@ If you want to start studying again you will need to contact your SST to enrol. 
 
 
 
-<div class="box-qual">
+<div class="box-expand-collapse">
 
 <h2>Other modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
 
-<div class="box-qual-inner">
+<div class="box-expand-collapse-inner">
 
 <h3>Completed modules</h3>
 
@@ -290,7 +290,7 @@ If you want to start studying again you will need to contact your SST to enrol. 
 
 </div> 
 </div> -->
-  <!-- end box-qual -->
+  <!-- end box-expand-collapse -->
   <p><a href="profile-t4.html">Back to Profile</a></p>
 </div>
 </div>
