--- a/study-record-module-only.html
+++ b/study-record-module-only.html
@@ -125,10 +125,10 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <option value="study-record.html">Standard</option>
     <option value="study-record-old-framework.html">Old Framework</option>
     <option value="study-record-open-degree.html">Open Degree</option>
-    <option value="study-record-access.html" selected>Access Module</option>
+    <option value="study-record-access.html">Access Module</option>
     <option value="study-record-resit.html">Resit</option>
     <option value="study-record-failed-cancelled.html">Failed/Cancelled</option>
-    <option value="study-record-module-only.html">Module Only</option>
+    <option value="study-record-module-only.html" selected>Module Only</option>
     <option value="study-record-finished-access.html">Finished Access</option>
   </select>
 </form>
@@ -149,104 +149,23 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
           <td><a href="module-record.html">Arts and languages Access module (Y031)</a></td>
         </tr>
       </table>
-    </div>
-    <!-- end box-expand-collapse-inner -->
-  </div>
-  <div class="box-expand-collapse">
-    
-    <h2>BA (Honours) <a href="#" class="show-hide minus">Expand/collapse</a> English Literature and Creative Writing</h2>
+      <h3>Completed modules</h3>
+      <table>
+        <tr>
+          <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
+          <td>2014</td>
+          <td>Pass</td>
+        </tr>
+        <tr>
+          <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
+          <td>2013</td>
+          <td>Pass</td>
+        </tr>
+      </table>
+      <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a></p>
 
-
-<div class="box-expand-collapse-inner">
-
-<ul class="list-style1">
-  <li><strong>Code</strong>: Q86</li>
-  <li><strong>Status</strong>: in progress</li>
-  <li><strong>Credits</strong>: 0 of 360</li>
-</ul>
-
-<table class="qual-progress">
-  <tr>
-    <td colspan="3">
-    <div class="progress-bar"><span class="progress" style="width:0%;">0%</span></div>
-    </td>
-    </tr>
-  <tr>
-    <td>Stage 1</td>
-    <td>Stage 2</td>
-    <td>Stage 3</td>
-  </tr>
-</table>
-<p><a href="interrupt-page.html" class="ou-btn">Choose next modules</a></p>
-<hr>
-<p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) English Literature and Creative Writing</p>
-
-<hr>
-
-<dl class="show-hide">
-<dt>Educational aims and learning outcomes</dt>
-<dd>
-   
-    
-    <h3>Educational aims</h3> <p>Professionals working in the IT sector bring many different kinds of expertise to their work. The aim of this degree is to equip you with the knowledge and skills you will need to underpin a career in this sector. As well as developing your knowledge and understanding of the fundamental technologies and techniques and the issues involved in their application, it will also:</p>
-<ul>
-<li>enable you to keep ahead in a rapidly changing subject area by helping you to develop as an independent learner</li>
-<li>develop relevant skills in communication, numeracy, and collaborative working</li>
-<li>imbue the qualities that come with being a graduate in any discipline: specialist knowledge, intellectual self-confidence and independence, analytical ability and the life-long learning skills needed to keep up with fast-changing technologies</li>
-<li>enable you to apply your learning in your private, social and professional life.</li>
-</ul>
-<p>And, depending on the pathway you choose through the degree, you may gain:</p>
-<ul>
-<li>practical experience in the use of information and communication technologies</li>
-<li>an understanding of the types of software and ICT systems that are now being constructed and used, such as distributed internet systems, intelligent systems and databases, and the digital network that underlies the internet itself</li>
-<li>a grasp of the key concepts of computing and of modern computer systems</li>
-<li>skills in the main tasks that are carried out as software is built and maintained, such as analysis, design, programming and evaluation.&nbsp;</li>
-</ul><h3>Learning outcomes</h3><h4>Knowledge and Understanding</h4><ul><li>a broad critical understanding of the fundamental principles, concepts and techniques underlying Computing and IT</li><li>a range of models and languages to support the analysis and design of Computing and IT systems</li><li>the range of situations in which Computing and IT systems are used, the ways in which people interact with them, and the possibilities and limitations of such systems</li><li>an awareness of major trends in computing and IT and of the implications of these trends</li><li>a critical awareness of the ethical, social and legal issues that can be associated with the development and deployment of Computing and IT systems.</li></ul><h4>Cognitive Skills</h4><ul><li>apply and critically evaluate key computing and IT concepts in a range of contexts</li><li>select and apply appropriate techniques and tools for abstracting, modelling, problem-solving, designing and testing computing and IT systems, and be aware of the limitations involved</li><li>compare, contrast, critically analyse and refine specifications and implementations of software systems and/or simple hardware systems</li><li>devise and carry out a project in computing and IT that applies and extends your knowledge and understanding, and critically reflect on the processes involved and the outcomes of your work.</li></ul><h4>Key Skills</h4><ul><li>communicate information, arguments, ideas and issues clearly and in appropriate ways;, bearing in mind the audience for and the purpose of your communication</li><li>work in a group, communicating effectively in a distance setting where the communication is computer-mediated</li><li>work independently, planning, monitoring, reflecting on and improving your own learning</li><li>find, assess and apply information from a variety of sources, using information technology where necessary</li><li>select and use accurately, appropriate numerical and analytical techniques to solve problems</li><li>recognise and understand a range of technological problems and select suitable techniques for solving them.</li></ul><h4>Practical and/or Professional Skills</h4><ul><li>analyse, design, evaluate and/or test computing and IT systems, using appropriate simulation and modelling tools where appropriate</li><li>plan and organise yourself and your work appropriately, including keeping systematic records of work in progress and outcomes</li><li>demonstrate the ability to undertake ongoing learning in order to keep up to date with computing and IT</li><li>identify and address the ethical, social and legal issues that may arise during the development and use of Computing and IT systems</li><li>use appropriate professional tools to support your work.</li></ul>
-
-
-
-
-
-</dd>
-
-<dt>Qualification End Date</dt>
-
-<dd>
-<p>This qualification has to be completed within 12 years. Your first credit counting towards this qualification is dated 06-Oct-2012 which means that you must complete this qualification by 06-Oct-2024.</p>
-</dd>
-
-<dt>Residential School Fees</dt>
-<dd>
-<p>This qualification contains a compulsory residential-school module. All students attending residential schools are responsible for the cost of travel to the venue, incidental expenses and an additional charge of £260 is payable for the cost of accommodation and meals.</p>
-</dd>
-
-<dt>Statement of Academic Record</dt>
-<dd>
-<p>Shows details of the credit you have obtained and counted towards this qualification so far.</p>
-
-<p class="pdf-download"><a href="#">Download statement (Adobe PDF, 60K)</a></p>
-</dd>
- 
-  <dt>Student Support Team</dt>
-<dd>
-  <p>For administrative support and specialist advice relating to this qualification <a href="http://csintra1.open.ac.uk/students/student-support-team.aspx?q=Q65">contact your Student Support Team</a>.</p>
-</dd>
-
-  <dt>Regulations</dt>
-<dd>
-  <p>To read the General Qualification Regulations, or Conditions of Registration, please see our <a href="http://www.open.ac.uk/students/charter/essential-documents/registration-as-a-student">Essential Documents</a>. Regulations specific to your qualification can be found below:<br>
-    <a id="ctl00_cphCEN_hypQualRegulation" href="http://www.open.ac.uk/courses/contentlibrary/qualifications/undergraduate/stagebasedprospectus/q65/reg-sbq65">Bachelor of Engineering (Honours)</a></p>
-</dd>
-
-  <dt>Qualification Fee</dt>
-<dd>
-  <p>The total cost of the qualification is determined by the combined cost of the individual modules required to complete it. Each module has an individual fee. There are also additional costs associated with study such as technology, travel to tutorials, set books and internet access which are not included in module fees.</p>
-</dd>
-
-</dl>
-
-</div> <!-- end box-expand-collapse-inner -->
-</div> <!-- end box-expand-collapse -->
+    </div> <!-- end box-expand-collapse-inner -->
+  </div> <!-- end box-expand-collapse -->
 
 <p><a href="profile.html">Back to Profile</a></p>
 
