--- a/study-record-module-only.html
+++ b/study-record-module-only.html
@@ -142,6 +142,8 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   <div class="box-expand-collapse">
     <h2>Your current modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
     <div class="box-expand-collapse-inner">
+    
+    <p><a href="next-module.html" class="ou-btn">Choose next modules</a></p>
       
       <h3>Enrolled modules</h3>
       <table>
