--- a/study-record-access.html
+++ b/study-record-access.html
@@ -139,6 +139,11 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <h1 class="h1main">Study record</h1>
 
 <div class="inview">
+  <div class="box-alert">
+    <h2>Enrol on modules</h2>
+    <p>You can now enrol on modules starting between 1st September 2015 and 31st August 2016.</p>
+    <p><a href="#" class="ou-btn">Choose next modules</a></p>
+  </div>
   <div class="box-expand-collapse">
     <h2>Your current modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
     <div class="box-expand-collapse-inner">
