--- a/study-record-module-only.html
+++ b/study-record-module-only.html
@@ -154,23 +154,36 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
           <td><a href="module-record.html">Arts and languages Access module (Y031)</a></td>
         </tr>
       </table>
+      <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a></p>
+
+    </div> <!-- end box-expand-collapse-inner -->
+  </div>
+  <div class="box-expand-collapse">
+    <h2>Your previous modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
+    <div class="box-expand-collapse-inner">
       <h3>Completed modules</h3>
       <table>
         <tr>
           <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
           <td>2014</td>
-          <td>Pass</td>
+          <td>Fail</td>
         </tr>
         <tr>
           <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
           <td>2013</td>
           <td>Pass</td>
         </tr>
+        <tr>
+          <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
+          <td>2012</td>
+          <td>Cancelled</td>
+        </tr>
       </table>
       <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a></p>
-
-    </div> <!-- end box-expand-collapse-inner -->
-  </div> <!-- end box-expand-collapse -->
+    </div>
+    <!-- end box-expand-collapse-inner -->
+  </div> 
+  <!-- end box-expand-collapse -->
 
 <p><a href="profile.html">Back to Profile</a></p>
 
