--- a/study-record-resit.html
+++ b/study-record-resit.html
@@ -186,7 +186,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   <tr>
     <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
     <td>2014</td>
-    <td>Pass</td>
+    <td>Awaiting resit</td>
   </tr>
   <tr>
     <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
