--- a/edit-online-appearance.html
+++ b/edit-online-appearance.html
@@ -644,11 +644,11 @@ $(document).ready(function(){
 <div class="box box-questions">
 <h2>How do I?</h2>
 <ul>
-  <li><a href="#">Choose a secure password</a></li>
-  <li><a href="#">Remember my password</a></li>
-  <li><a href="#">Stay safe on the internet</a></li>
-  <li><a href="#">Login to Google Apps</a></li>
-  <li><a href="#">Login using Facebook</a></li>
+  <li><a href="#1">Choose a secure password</a></li>
+  <li><a href="#2">Remember my password</a></li>
+  <li><a href="#3">Stay safe on the internet</a></li>
+  <li><a href="#4">Login to Google Apps</a></li>
+  <li><a href="#5">Login using Facebook</a></li>
 </ul>
   
 <p class="box-link"><a href="#">Get more from the Help Centre</a></p>
