--- a/finance.html
+++ b/finance.html
@@ -118,6 +118,7 @@
                     <br>
                     Minicom 0300 100 0622 (only works with a Minicom device)
                 </p>
+                <p><a href="profile.html">Back to Profile</a></p>
 
 
 
