--- a/study-record-resit.html
+++ b/study-record-resit.html
@@ -125,9 +125,9 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   <select name="jumpMenu" id="jumpMenu" onChange="MM_jumpMenu('parent',this,0)">
     <option value="study-record.html">Standard</option>
     <option value="study-record-old-framework.html">Old Framework</option>
-    <option value="study-record-open-degree.html" selected>Open Degree</option>
+    <option value="study-record-open-degree.html">Open Degree</option>
     <option value="study-record-access.html">Access Module</option>
-    <option value="study-record-resit.html">Resit</option>
+    <option value="study-record-resit.html" selected>Resit</option>
     <option value="study-record-failed-cancelled.html">Failed/Cancelled</option>
     <option value="study-record-module-only.html">Module Only</option>
     <option value="study-record-finished-access.html">Finished Access</option>
