--- a/study-record.html
+++ b/study-record.html
@@ -127,6 +127,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <option value="study-record-open-degree.html">Open Degree</option>
     <option value="study-record-access.html">Access Module</option>
     <option value="study-record-resit.html">Resit</option>
+    <option value="study-record-deferred.html">Deferred</option>
     <option value="study-record-failed-cancelled.html">Failed/Cancelled</option>
     <option value="study-record-module-only.html">Module Only</option>
     <option value="study-record-finished-access.html">Finished Access</option>
