retina icons, mod desc start

--- a/next-module.html
+++ b/next-module.html
@@ -111,14 +111,26 @@
 
 <p class="note"><sup>†</sup> You can check your qualification completion date on your <a href="study-record.aspx?stay=1">qualification record</a>.
 
-<p>If you are concerned you might not complete in time have a look at the <a href="http://www2.open.ac.uk/students/help/options-pack/qualification?slide=1">options available</a> to you and keep them in mind when selecting your modules this year.</p>
+<hr>
 
-<p>Thinking of changing your qualification? Visit our <a href="http://www2.open.ac.uk/students/help/planning-studies">Plan your study</a> site for advice and guidance on your options.</p>
-
-
-<p>If you have any questions about your eligibility for this qualification please contact the Credit,
-Qualifications and Ceremonies Centre by  <a href="contact.aspx?t=2">email</a>.</p>
-
+<div class="ou-grid next-module">
+  <div class="ou-c1of3 next-module-time">
+    <div>
+      <p>If you are concerned you might not complete in time have a look at the <a href="http://www2.open.ac.uk/students/help/options-pack/qualification?slide=1">options available</a> to you and keep them in mind when selecting your modules this year.</p>
+    </div>
+  </div>
+  <div class="ou-c2of3 next-module-change">
+    <div>
+      <p>Thinking of changing your qualification? Visit our <a href="http://www2.open.ac.uk/students/help/planning-studies">Plan your study</a> site for advice and guidance on your options.</p>
+    </div>
+  </div>
+  <div class="ou-c3of3 next-module-help">
+    <div>
+      <p>If you have any questions about your eligibility for this qualification please contact the Credit,
+        Qualifications and Ceremonies Centre by <a href="contact.aspx?t=2">email</a>.</p>
+    </div>
+  </div>
+</div>
 <hr>
 
              
