--- a/module-description.html
+++ b/module-description.html
@@ -77,11 +77,12 @@
 
 
 <ol class="ou-breadcrumb">
-	<li><a href="studenthome.html">StudentHome</a></li>
-	<li><a href="profile.html">Profile</a></li>
-  <li><a href="study-record.html">Study record</a></li>
-  <li><a href="next-module.html">Next module</a></li>
-  <li>Module search</li>
+    <li><a href="studenthome.html">StudentHome</a></li>
+    <li><a href="profile.html">Profile</a></li>
+    <li><a href="study-record.html">Study record</a></li>
+    <li><a href="next-module.html">Next module</a></li>
+    <li><a href="module-search.html">Module search</a></li>
+    <li>An introduction to law</li>
 </ol>
 
 
@@ -90,13 +91,24 @@
 <h1>An introduction to law</h1>
 
 <div class="inview">
-  <dl class="ou-toc" id="ou-toc">
-  <dt>On this page</dt>
+
+<dl class="ou-toc" id="ou-toc">
+<dt>On this page</dt>
 <dd>
-<ul class="onthispage">
-<li><a href="#register">Register</a></li>
-<li><a href="#course-content">What you will study</a></li>
-<li><a href="#entry">Entry</a></li><li><a href="#qualifications">Qualifications</a></li><li><a href="#disability">If you have a disability</a></li><li><a href="#course-materials">Study materials</a></li><li><a href="#teaching-and-assessment">Teaching and assessment</a></li><li><a href="#professional-recognition">Professional recognition</a></li><li><a href="#students-also-studied">Students also studied</a></li><li><a href="#future-availability">Future availability</a></li><li><a href="#how-to-register">How to register</a></li><li><a href="#regulations">Regulations</a></li></ul>
+    <ul class="onthispage">
+        <li><a href="#register">Register</a></li>
+        <li><a href="#course-content">What you will study</a></li>
+        <li><a href="#entry">Entry</a></li>
+        <li><a href="#qualifications">Qualifications</a></li>
+        <li><a href="#disability">If you have a disability</a></li>
+        <li><a href="#course-materials">Study materials</a></li>
+        <li><a href="#teaching-and-assessment">Teaching and assessment</a></li>
+        <li><a href="#professional-recognition">Professional recognition</a></li>
+        <li><a href="#students-also-studied">Students also studied</a></li>
+        <li><a href="#future-availability">Future availability</a></li>
+        <li><a href="#how-to-register">How to register</a></li>
+        <li><a href="#regulations">Regulations</a></li>
+    </ul>
 </dd>
 </dl>
 
@@ -104,20 +116,22 @@
 <!-- Summary of Module -->
 
 <div class="item" id="summary">
-<p>This key introductory OU level 1 law module is taught entirely online and considers the nature and role of law. It examines the role and function of a legal system by considering why laws develop, how laws &nbsp;are created, interpreted and applied and the role that law plays in regulating and administering justice within a society. The relationship between law, judicial reasoning, public policy and politics is also explored. You will work through the module using a blend of online text materials, audio, video, and interactive online activities.</p>
-<p>The key aspects of law making in England and Wales are covered, including the mechanisms created for the administration and enforcement of justice in these jurisdictions. The module also considers a number of fundamental legal concepts such as liability, culpability, evidence and sanctions.</p>
+    <p>This key introductory OU level 1 law module is taught entirely online and considers the nature and role of law. It examines the role and function of a legal system by considering why laws develop, how laws &nbsp;are created, interpreted and applied and the role that law plays in regulating and administering justice within a society. The relationship between law, judicial reasoning, public policy and politics is also explored. You will work through the module using a blend of online text materials, audio, video, and interactive online activities.</p>
+    <p>The key aspects of law making in England and Wales are covered, including the mechanisms created for the administration and enforcement of justice in these jurisdictions. The module also considers a number of fundamental legal concepts such as liability, culpability, evidence and sanctions.</p>
 </div>
 
 
 
-  <div class="item" id="registerbox">
-<div class="item" id="register" class="ou-feature-block">
+<div class="item" id="register">
+
+<div class="next-module-register">
+
 <h2>Register</h2>
-<table id="EU" class="default"><tbody><tr>
+<table>
+<tbody><tr>
 <th scope="col">Start</th>
 <th scope="col">End</th>
-<th scope="col">
-Europe fee</th>
+<th scope="col">Europe fee</th>
 <th scope="col">Register</th>
 </tr>
 <tr>
@@ -140,7 +154,7 @@ Jun 2016</td>
   <td>
     £2700.00</td>
   <td id="register-cell">
-  <p>Registration closes 07/01/16 (places subject to availability)</p><a class="button" href="https://css2.open.ac.uk/outis/1bd/o1bdHomePage.asp?CourseCode=W101&amp;PresCode=2016B">Click to register</a>
+  <p>Registration closes 07/01/16 (places subject to availability)</p><a class="ou-btn" href="https://css2.open.ac.uk/outis/1bd/o1bdHomePage.asp?CourseCode=W101&amp;PresCode=2016B">Click to register</a>
   </td>
 </tr>
 <tr>
@@ -172,9 +186,8 @@ Jun 2016</td>
 
 <p class="note">This module is expected to start for the last time in October 2021.</p>
 </div>
+   
 </div>
-     
-
 
 
 
@@ -443,7 +456,7 @@ Students who studied this module also studied at some time:
 <div class="item" id="how-to-register">
  
 <h2>How to register</h2>
-<p>To register a place on this module return to the top of the page and use the <em>Click to register</em> button.</p>
+<p>To register a place on this module return to the <a href="#register">top of the page</a> and use the <em>Click to register</em> button.</p>
       
 </div>
 
@@ -471,13 +484,13 @@ Students who studied this module also studied at some time:
 
 <div class="r3 aside">
 
-
+<div class="r3-inner">
 
   <div id="course-facts-new">
   
-  <p>Undergraduate</p>
+  <p class="ug-pg ug"><span class="code">UG</span> <span class="ug-pg">Undergraduate</span></p>
+  
   <h2>Course facts</h2>
-
     <table>
       <tbody>
         <tr>
@@ -519,11 +532,14 @@ Students who studied this module also studied at some time:
     </table>
   </div>
 
-<div id="open-learn-link" class="ou-summary">
-    <h3>A taste of OU study</h3>
-    <p><a href="http://www.open.edu/openlearn/people-politics-law/the-law-making-process-england-and-wales/content-section-0">Try W101 study materials on OpenLearn</a></p>
+<div id="open-learn-link" class="box">
+    <h2>A taste of OU study</h2>
+    <ul>
+    <li><a href="http://www.open.edu/openlearn/people-politics-law/the-law-making-process-england-and-wales/content-section-0">Try W101 study materials on OpenLearn</a></li>
+	</ul>
 </div>
 
+</div> <!-- end r3-inner -->
 
 </div>
 
