--- a/module-search-results.html
+++ b/module-search-results.html
@@ -91,7 +91,7 @@
 <h1>Module search results</h1>
 <div class="inview">  
 
-<p>NB from here you end up at the module description for each module. <a href="module-description.html">Example</a></p>
+<p><em>NB from here you end up at the module description for each module. <a href="module-description.html">Example</a></em></p>
 
   <h2>Level 1</h2>
 
