--- a/module-description.html
+++ b/module-description.html
@@ -127,6 +127,8 @@
 <div class="next-module-register">
 
 <h2>Register</h2>
+
+<div class="table-wrap">
 <table>
 <tbody><tr>
 <th scope="col">Start</th>
@@ -183,6 +185,7 @@ Jun 2016</td>
 </tr>
 </tbody>
 </table>
+</div> <!-- end table-wrap -->
 
 <p class="note">This module is expected to start for the last time in October 2021.</p>
 </div>
