Elle's changes to general pages

--- a/study-record-access.html
+++ b/study-record-access.html
@@ -152,7 +152,8 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
       <h3>Enrolled modules</h3>
       <table>
         <tr>
-          <td><a href="module-record.html">Arts and languages Access module (Y031)</a></td>
+          <td><a href="module-record.html">Arts and languages Access module (Y031) </a></td>
+          <td>Oct 2015</td>
         </tr>
       </table>
     </div>
@@ -160,15 +161,16 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   </div>
   <div class="box-expand-collapse">
     
-    <h2>BA (Honours) <a href="#" class="show-hide minus">Expand/collapse</a> English Literature and Creative Writing</h2>
+    <h2>BA (Honours) <a href="#" class="show-hide minus">Expand/collapse</a> English Literature and Creative Writing (in progress)</h2>
 
 
 <div class="box-expand-collapse-inner">
 
 <ul class="list-style1">
   <li><strong>Code</strong>: Q86</li>
-  <li><strong>Status</strong>: in progress</li>
+ <!-- <li><strong>Status</strong>: in progress</li>-->
   <li><strong>Credits</strong>: 0 of 360</li>
+    <li><a href="#">View qualification description</a></li>
 </ul>
 
 <table class="qual-progress">
@@ -178,9 +180,9 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     </td>
     </tr>
   <tr>
-    <td>Stage 1</td>
-    <td>Stage 2</td>
-    <td>Stage 3</td>
+    <td>120 credits</td>
+    <td>240 credits</td>
+    <td>360 credits</td>
   </tr>
 </table>
 <p><a href="interrupt-page.html" class="ou-btn">Choose next modules</a></p>
@@ -233,10 +235,6 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <p class="pdf-download"><a href="#">Download statement (Adobe PDF, 60K)</a></p>
 </dd>
  
-  <dt>Student Support Team</dt>
-<dd>
-  <p>For administrative support and specialist advice relating to this qualification <a href="http://csintra1.open.ac.uk/students/student-support-team.aspx?q=Q65">contact your Student Support Team</a>.</p>
-</dd>
 
   <dt>Regulations</dt>
 <dd>
@@ -275,7 +273,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </ul>
   
 <p class="box-link"><a href="#">Get more from the Help Centre</a></p>
-
+<p class="box-link"><a href="#">Your student loan</a></p>
 </div>
 
 <div class="box box-downloads">
