--- a/study-record-deferred.html
+++ b/study-record-deferred.html
@@ -148,17 +148,15 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
   <div class="box-expand-collapse">
     
-  <h2>BA/BSc (Honours) Open degree <a href="#" class="show-hide minus">Expand/collapse</a> </h2>
+  <h2>BA/BSc (Honours) Open degree (in progress)<a href="#" class="show-hide minus">Expand/collapse</a> </h2>
 
 
 <div class="box-expand-collapse-inner">
 
 <ul class="list-style1">
   <li><strong>Code</strong>: QD</li>
-  <li><strong>Status</strong>: in progress</li>
   <li><strong>Credits</strong>: 180 of 360</li>
-  <li></li>
-</ul>
+<li><a href="#">View qualification description</a></li></ul>
 
 <table class="qual-progress">
   <tr>
@@ -167,9 +165,9 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     </td>
     </tr>
   <tr>
-    <td>Stage 1</td>
-    <td>Stage 2</td>
-    <td>Stage 3</td>
+    <td>120 credits</td>
+    <td>240 credits</td>
+    <td>360 credits</td>
   </tr>
 </table>
 <p><a href="next-module.html" class="ou-btn">Choose next modules</a></p>
@@ -178,19 +176,23 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <h3>Deferred modules</h3>
 <table>
   <tr>
-    <td><a href="module-record.html"> Investigating the social world (DD103)</a>  (deferred, assessment banked)</td>
+    <td><a href="module-record.html"> Investigating the social world (DD103)</a></td>
+    <td>Oct 2015</td>
+    <td>  
+      <p>(deferred, assessment banked)</p>
+      <p><a href="#">Enrol on next presentation</a></p></td>
   </tr>
 </table>
 <h3>Completed modules</h3>
 <table>
   <tr>
     <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>2014</td>
+    <td>Oct 2014</td>
     <td>Pass</td>
   </tr>
   <tr>
     <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-    <td>2013</td>
+    <td>Oct 2013</td>
     <td>Pass</td>
   </tr>
 </table>
@@ -248,10 +250,6 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <p class="pdf-download"><a href="#">Download statement (Adobe PDF, 60K)</a></p>
 </dd>
  
-  <dt>Student Support Team</dt>
-<dd>
-  <p>For administrative support and specialist advice relating to this qualification <a href="http://csintra1.open.ac.uk/students/student-support-team.aspx?q=Q65">contact your Student Support Team</a>.</p>
-</dd>
 
   <dt>Regulations</dt>
 <dd>
@@ -293,6 +291,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </ul>
   
 <p class="box-link"><a href="#">Get more from the Help Centre</a></p>
+<p class="box-link"><a href="#">Your student loan</a></p>
 
 </div>
 
