--- a/study-record-module-only.html
+++ b/study-record-module-only.html
@@ -146,13 +146,14 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <p><a href="#" class="ou-btn">Choose next modules</a></p>
   </div>
   <div class="box-expand-collapse">
-    <h2>Your current modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
+    <h2>Current modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
     <div class="box-expand-collapse-inner">
           
       <h3>Enrolled modules</h3>
       <table>
         <tr>
           <td><a href="module-record.html">Arts and languages Access module (Y031)</a></td>
+          <td>Oct 2015</td>
         </tr>
       </table>
       <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a></p>
@@ -160,23 +161,34 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     </div> <!-- end box-expand-collapse-inner -->
   </div>
   <div class="box-expand-collapse">
-    <h2>Your previous modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
+    <h2>Completed modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
+    <div class="box-expand-collapse-inner">
+      <h3>Completed modules</h3>
+      <table>
+        <tr>
+          <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
+          <td>Oct 2013</td>
+          <td>Pass</td>
+        </tr>
+      </table>
+      <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a></p>
+    </div>
+    <!-- end box-expand-collapse-inner -->
+  </div> 
+  <!-- end box-expand-collapse -->
+  <div class="box-expand-collapse collapsed">
+    <h2>Other modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
     <div class="box-expand-collapse-inner">
       <h3>Completed modules</h3>
       <table>
         <tr>
           <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-          <td>2014</td>
+          <td>Feb 2014</td>
           <td>Fail</td>
         </tr>
         <tr>
           <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-          <td>2013</td>
-          <td>Pass</td>
-        </tr>
-        <tr>
-          <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-          <td>2012</td>
+          <td>Oct 2012</td>
           <td>Cancelled</td>
         </tr>
       </table>
