--- a/study-record-resit.html
+++ b/study-record-resit.html
@@ -141,17 +141,15 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <div class="inview">
   <div class="box-expand-collapse">
     
-  <h2>BA/BSc (Honours) Open degree <a href="#" class="show-hide minus">Expand/collapse</a> </h2>
+  <h2>BA/BSc (Honours) Open degree (in progress)<a href="#" class="show-hide minus">Expand/collapse</a> </h2>
 
 
 <div class="box-expand-collapse-inner">
 
 <ul class="list-style1">
   <li><strong>Code</strong>: QD</li>
-  <li><strong>Status</strong>: in progress</li>
   <li><strong>Credits</strong>: 180 of 360</li>
-  <li></li>
-</ul>
+<li><a href="#">View qualification description</a></li></ul>
 
 <table class="qual-progress">
   <tr>
@@ -160,23 +158,24 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     </td>
     </tr>
   <tr>
-    <td>Stage 1</td>
-    <td>Stage 2</td>
-    <td>Stage 3</td>
+    <td>120 credits</td>
+    <td>240 credits</td>
+    <td>360 credits</td>
   </tr>
 </table>
 <p><a href="next-module.html" class="ou-btn">Choose next modules</a></p>
 
 <hr>
 
-<h3>Awaiting resit</h3>
+<h3>Awaiting resit or resubmission</h3>
 <table>
   <tr>
     <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
+    <td>Feb 2016</td>
   </tr>
 </table>
 <h3>Enrolled modules</h3>
-<p class="loan-text">Student Finance England (SFE) has approved a <a href="your-loan-a.html">loan for 2015/2016</a>.</p>
+
 <table>
   <tr>
     <td><a href="module-record.html">Investigating the social world (DD103)</a></td>
@@ -186,15 +185,17 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <table>
   <tr>
     <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
-    <td>2014</td>
+    <td>Oct 2014</td>
     <td>Awaiting resit</td>
   </tr>
   <tr>
     <td><a href="module-record.html">People, work and Society Access module (Y032)</a></td>
-    <td>2013</td>
+    <td>Feb 2013</td>
     <td>Pass</td>
   </tr>
 </table>
+
+
 <p class="pdf-download">Download your <a href="#">Statement of Academic Record</a> for your BA (Honours) Humanities qualification</p>
 
 <hr>
@@ -249,10 +250,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <p class="pdf-download"><a href="#">Download statement (Adobe PDF, 60K)</a></p>
 </dd>
  
-  <dt>Student Support Team</dt>
-<dd>
-  <p>For administrative support and specialist advice relating to this qualification <a href="http://csintra1.open.ac.uk/students/student-support-team.aspx?q=Q65">contact your Student Support Team</a>.</p>
-</dd>
+
 
   <dt>Regulations</dt>
 <dd>
@@ -270,6 +268,20 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </div> <!-- end box-expand-collapse-inner -->
 </div> <!-- end box-expand-collapse -->
  
+<div class="box-expand-collapse collapsed">
+    <h2>Other  modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
+
+ <div class="box-expand-collapse-inner">
+   
+      <table>
+        <td><a href="module-record.html"> Introducing the social sciences (DD102)</a></td>
+    <td>Oct 2014</td>
+    <td>Awaiting resit</td>
+      </table>
+    </div>
+    <!-- end box-expand-collapse-inner -->
+  </div> 
+  <!-- end box-expand-collapse -->
 
 
 <p><a href="profile.html">Back to Profile</a></p>
