--- a/study-record-failed-cancelled.html
+++ b/study-record-failed-cancelled.html
@@ -142,16 +142,16 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <div class="inview">
   <div class="box-expand-collapse">
     
-  <h2>BA/BSc (Honours) Open degree <a href="#" class="show-hide minus">Expand/collapse</a> </h2>
+  <h2>BA/BSc (Honours) Open degree (in progress)<a href="#" class="show-hide minus">Expand/collapse</a> </h2>
 
 
 <div class="box-expand-collapse-inner">
 
 <ul class="list-style1">
   <li><strong>Code</strong>: QD</li>
-  <li><strong>Status</strong>: in progress</li>
+  <!--<li><strong>Status</strong>: in progress</li>-->
   <li><strong>Credits</strong>: 180 of 360</li>
-  <li></li>
+  <li><a href="#">View qualification description</a></li>
 </ul>
 
 <table class="qual-progress">
@@ -161,9 +161,9 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     </td>
     </tr>
   <tr>
-    <td>Stage 1</td>
-    <td>Stage 2</td>
-    <td>Stage 3</td>
+    <td>120 credits</td>
+    <td>240 credits</td>
+    <td>360 credits</td>
   </tr>
 </table>
 <p><a href="next-module.html" class="ou-btn">Choose next modules</a></p>
@@ -171,7 +171,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <hr>
 
 <h3>Enrolled modules</h3>
-<p class="loan-text">Student Finance England (SFE) has approved a <a href="your-loan-a.html">loan for 2015/2016</a>.</p>
+
 <table>
   <tr>
     <td><a href="module-record.html">Investigating the social world (DD103)</a></td>
@@ -245,11 +245,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
 <p class="pdf-download"><a href="#">Download statement (Adobe PDF, 60K)</a></p>
 </dd>
- 
-  <dt>Student Support Team</dt>
-<dd>
-  <p>For administrative support and specialist advice relating to this qualification <a href="http://csintra1.open.ac.uk/students/student-support-team.aspx?q=Q65">contact your Student Support Team</a>.</p>
-</dd>
+
 
   <dt>Regulations</dt>
 <dd>
@@ -267,13 +263,30 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </div> <!-- end box-expand-collapse-inner -->
 </div>
   <div class="box-expand-collapse">
-    <h2>Your other modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
+    <h2>Other completed modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
     <div class="box-expand-collapse-inner">
-      <h3>Completed modules</h3>
       <table>
         <tr>
           <td><a href="module-record.html">An introduction to business studies (B120)</a></td>
           <td>2014</td>
+          <td>Pass</td>
+        </tr>
+       
+    </table>
+    </div>
+    <!-- end box-expand-collapse-inner -->
+  </div> 
+  <!-- end box-expand-collapse -->
+ 
+<div class="box-expand-collapse collapsed">
+    <h2>Other  modules <a href="#" class="show-hide minus">Expand/collapse</a></h2>
+
+ <div class="box-expand-collapse-inner">
+   
+      <table>
+        <tr>
+          <td><a href="module-record.html">An introduction to business studies (B120)</a></td>
+          <td>2013</td>
           <td>Fail</td>
         </tr>
         <tr>
@@ -286,7 +299,8 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <!-- end box-expand-collapse-inner -->
   </div> 
   <!-- end box-expand-collapse -->
- 
+
+
 
 
 <p><a href="profile.html">Back to Profile</a></p>
@@ -310,6 +324,9 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </ul>
   
 <p class="box-link"><a href="#">Get more from the Help Centre</a></p>
+
+<p class="box-link"><a href="#">Your student loan</a></p>
+
 
 </div>
 
