--- a/study-record-finished-access.html
+++ b/study-record-finished-access.html
@@ -147,15 +147,15 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
   </div>
   <div class="box-expand-collapse">
     
-    <h2>BA (Honours) <a href="#" class="show-hide minus">Expand/collapse</a> English Language and Literature</h2>
+    <h2>BA (Honours) <a href="#" class="show-hide minus">Expand/collapse</a> English Language and Literature (in progress)</h2>
 
 
 <div class="box-expand-collapse-inner">
 
 <ul class="list-style1">
   <li><strong>Code</strong>: Q39</li>
-  <li><strong>Status</strong>: in progress</li>
   <li><strong>Credits</strong>: 60 of 360</li>
+  <li><a href="#">View qualification description</a></li>
 </ul>
 
 <table class="qual-progress">
@@ -165,9 +165,9 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     </td>
     </tr>
   <tr>
-    <td>Stage 1</td>
-    <td>Stage 2</td>
-    <td>Stage 3</td>
+    <td>120 credits</td>
+    <td>240 credits</td>
+    <td>360 credits</td>
   </tr>
 </table>
 <p><a href="interrupt-page.html" class="ou-btn">Choose next modules</a></p>
@@ -180,13 +180,14 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <table>
   <tr>
     <td><a href="module-record.html">Voices, texts and material culture (A105)</a></td>
+    <td>Oct 2015</td>
   </tr>
 </table>
 <h3>Completed modules</h3>
 <table>
   <tr>
     <td><a href="module-record.html">The arts and the present (AA100)</a></td>
-    <td>2014</td>
+    <td>Oct 2014</td>
     <td>Pass</td>
   </tr>
 </table>
@@ -234,10 +235,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 <p class="pdf-download"><a href="#">Download statement (Adobe PDF, 60K)</a></p>
 </dd>
  
-  <dt>Student Support Team</dt>
-<dd>
-  <p>For administrative support and specialist advice relating to this qualification <a href="http://csintra1.open.ac.uk/students/student-support-team.aspx?q=Q65">contact your Student Support Team</a>.</p>
-</dd>
+  
 
   <dt>Regulations</dt>
 <dd>
@@ -261,7 +259,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
       <table>
         <tr>
           <td><a href="module-record.html">Starting with psychology (Y183)</a></td>
-          <td>2014</td>
+          <td>Oct 2013</td>
           <td>Pass</td>
         </tr>
     </table>
@@ -291,7 +289,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </ul>
   
 <p class="box-link"><a href="#">Get more from the Help Centre</a></p>
-
+<p class="box-link"><a href="#">Your student loan</a></p>
 </div>
 
 <div class="box box-downloads">
